--- a/MauiApp1/CustomControls/ImageContainer.xaml
+++ b/MauiApp1/CustomControls/ImageContainer.xaml
@@ -3,21 +3,57 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1.CustomControls.ImageContainer"
              x:Name="content">
-    <CollectionView x:Name="collection">
+    <CollectionView x:Name="collection" >
+        <CollectionView.ItemsLayout>
+            <GridItemsLayout Orientation="Vertical"
+                             Span="3"/>
+        </CollectionView.ItemsLayout>
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <Grid>
-                    <Image Source="{Binding ImagePath}"
-                               Aspect="AspectFit"/>
-                    <Button Text="X"
+                <Frame CornerRadius="10"
+                       HeightRequest="250"
+                       Margin="2">
+                    <Grid Margin="-40">
+                        <Image Source="{Binding ImagePath}"
+                               Aspect="AspectFill"
+                               IsVisible="True">
+                            <Image.Triggers>
+                                <DataTrigger TargetType="Image" Binding="{Binding ImagePath}" Value="">
+                                    <Setter Property="IsVisible" Value="False"/>
+                                </DataTrigger>
+                            </Image.Triggers>
+                        </Image>
+                        <Button Text="X"
                                 VerticalOptions="Start"
                                 HorizontalOptions="End"
                                 Margin="5"
                                 BackgroundColor="Transparent"
                                 TextColor="Red"
                                 Command="{Binding Source={Reference content},Path=RemoveCommand}"
-                                CommandParameter="{Binding .}"/>
-                </Grid>
+                                CommandParameter="{Binding .}">
+                            <Button.Triggers>
+                                <DataTrigger TargetType="Button" Binding="{Binding ImagePath}" Value="">
+                                    <Setter Property="IsVisible" Value="False"/>
+                                </DataTrigger>
+                            </Button.Triggers>
+                        </Button>
+                        <Button Text="+"
+                                FontSize="25"
+                                VerticalOptions="Fill"
+                                HorizontalOptions="Fill"
+                                TextColor="{x:StaticResource Primary}"
+                                BackgroundColor="Transparent"
+                                Command="{Binding Source={Reference content},Path= AddCommand}"
+                                CommandParameter="{Binding .}"
+                                IsVisible="False">
+                            <Button.Triggers>
+                                <DataTrigger TargetType="Button" Binding="{Binding ImagePath}" Value="">
+                                    <Setter Property="IsVisible" Value="True"/>
+                                </DataTrigger>
+                            </Button.Triggers>
+                        </Button>
+                    </Grid>
+                </Frame>
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
